--- a/docker/dockerfile-scarf.yaml
+++ b/docker/dockerfile-scarf.yaml
@@ -21,3 +21,4 @@ RUN go get github.com/pierrec/lz4
 ##RUN go install broker
 
 # Run the outyet command by default when the container starts.
+ENTRYPOINT ["/go/bin/consumer", "-submitToES"]
