--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -4,7 +4,6 @@
 #openssl pkcs12 -in ./file.pfx -nocerts -nodes -out private.rsa
 
 
-
 server {
   listen              443 ssl;
   ssl_certificate     /usr/local/nginx/ssl/public.crt;
@@ -18,5 +17,5 @@ server {
   location /static {
     alias /var/www/;
   }
-  # look into upstream
+  # look into upstream?
 }
