--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -3,7 +3,7 @@
 #And extract the private key:
 #openssl pkcs12 -in ./file.pfx -nocerts -nodes -out private.rsa
 
-
+## for nginx
 server {
   listen              443 ssl;
   ssl_certificate     /usr/local/nginx/ssl/public.crt;
